--- a/index.Html
+++ b/index.Html
@@ -81,7 +81,11 @@
             <h1 class="heading-section-2">Our Speakers Come From <br />
                 Your Dream Companies
             </h1>
-            <div class="image-container">
+             <div class="image-container d-flex flex-row mb-3">
+                <img src="https://nxtwave-website-media-files.s3.ap-south-1.amazonaws.com/ccbp-website/podcast/our-speaker-come-from-section/company-scroll-strip-row-1.png" class="image mb-3">
+                <img src="https://nxtwave-website-media-files.s3.ap-south-1.amazonaws.com/ccbp-website/podcast/our-speaker-come-from-section/company-scroll-strip-row-2.png" class="image">
+            </div>
+            <div class="image-container d-flex flex-row ">
                 <img src="https://nxtwave-website-media-files.s3.ap-south-1.amazonaws.com/ccbp-website/podcast/our-speaker-come-from-section/company-scroll-strip-row-1.png" class="image mb-3">
                 <img src="https://nxtwave-website-media-files.s3.ap-south-1.amazonaws.com/ccbp-website/podcast/our-speaker-come-from-section/company-scroll-strip-row-2.png" class="image">
             </div>
